src/test/deca/syntax/invalid/without_class/invalid_syntax_int.deca
// Description:
//    Error syntax for int initialization  	  
//
// Resultats:
//    Syntax Error
//    line 8
{
    int entry = 04;
}